# Dai-Ma-Fu-Ke-2

./: .replit  REPLIT_PULL_TEST.txt  cf-worker.js  pnpm-lock.yaml  pyproject.toml  replit.md  replit.nix  uv.toml
artifacts/admin-panel/: index.html  package.json  vite.config.ts
artifacts/admin-panel/.replit-artifact/: artifact.toml
artifacts/admin-panel/src/: App.tsx  index.css  main.tsx
artifacts/api-server/.replit-artifact/: artifact.toml
artifacts/api-server/src/: app.ts  index.ts
attached_assets/: Pasted--LOW-Bug-8-graceful-shutdown-JWT-Semaphore-personal-key_1777310158843.txt  Pasted--LOW-Bug-Replit-Agent-Bug-LOW--1777310282681_1777310282682.txt  Pasted--LOW-LOW-key--1777311427731_1777311427732.txt  Pasted--LOW-LOW-per-Discord-executor-LOW--1777311231617_1777311231618.txt  Pasted--LOW-Worker-Replit-Agent-LOW--1777311777387_1777311777388.txt  Pasted--Replit-Agent-Replit-Agent--1777309854173_1777309854174.txt  Pasted--Replit-Agent-Replit-Agent-Agent--1777308834927_1777308834930.txt  Pasted-input-Unstructured-hint-issue-description-meta-null-met_1777728048775.txt  cf-worker.js_1777701674563.txt  jb-activate-full_(1)_1777788437156.py  jb_change_password_demo_1777138966785.py
jetbrainsai2api/: jb_activate.py  main.py  models.json  requirements.txt
netlify-claude-proxy/: .gitignore  README.md  netlify.toml  package.json
netlify-claude-proxy/netlify/edge-functions/: chat.ts  health.ts  models.ts
netlify-claude-proxy/public/: index.html
scripts/: build-api-server.sh  package.json
scripts/src/: deploy-netlify.ts
(+30 files in other folders)
