[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "asyncpg>=0.31.0",
    "cryptography>=46.0.7",
    "fastapi==0.115.13",
    "httpx==0.28.1",
    "psycopg2-binary>=2.9.11",
    "pydantic==2.10.3",
    "python-jose[cryptography]>=3.5.0",
    "requests>=2.33.1",
    "starlette==0.46.2",
    "uvicorn[standard]==0.34.3",
]
